  previous behavior was error-prone: inserting into a scratch collection via <=
  was not rejected, but the inserted data would immediately be discarded at the
  beginning of the next tick. Hence, more consistent to simply require <+ or <~
  for all insertions from outside Bloom rules.
* Fix bug in join rules whose qualifiers reference collections defined inside
  imported modules (#301)
* Fix regression in file_reader collections (#304)
* Rename lmap#apply_monotone to lmap#apply. Also, allow #apply to take either
  monotone functions or morphisms, and improve error reporting.
* Add lmap#filter. This takes an lmap whose values are elements of the lbool
  lattice and returns an lmap containing only those k/v pairs where the value is
  true.
* Support deletion rules (<-) with lattice values on the RHS
* Optimize notin self joins

== 0.9.6 / 2013-02-25

* Support syntax sugar for initializing lattices (#294). For example, rather
  than writing "foo <= Bud::MaxLattice.new(2)", you can now just write "foo <=
  2". Note that, due to a bug in the superator gem, you cannot use this syntax
  with the <+ operator.
* Allow nested lattice values to be sent over channels (#295, patch from Josh
  Rosen). Lattice values could previously be sent as a field value in a tuple
  delivered over a channel, but they could not be embedded arbitrarily deeply
  within tuples (e.g., lattices nested within an array could not previously be
  sent as a field value).
* Support "Comparable" for Bud::Lattice values
* Add support for lattices to rebl
* Reject attempts to insert into stdio via <+ (#288)
* Restore functionality of reading from stdio (i.e., stdin) with MRI 1.9
* Improve MRI 1.8 compatibility
* Require ruby_parser >= 3.1.0
* Fix bug in bootstrap blocks for lattice values
* Fix bug in rescan/invalidation for rules that reference lattice values and use
  the <+ or <~ operators (#290)
* Fix bug in rescan logic for notin operator (#291)